--- a/test.html
+++ b/test.html
@@ -7,157 +7,12 @@
   <body>
     <div style="list-style: inside">
       <div>
-        <p><b>Step 1: Preparation:</b></p>
         <ul>
           <li>
-            Make sure you have at least 0.015 ETH in your wallet to cover the
-            gas fee. Or about $20 worth of ETH
+            To view your token balance within Trust Wallet, add the SUP token to your wallet. Click on the dotted button in the top-right of the screen, followed by ‘Add Custom Token.’ Paste the SUP contract address:
           </li>
         </ul>
       </div>
-
-      <div>
-        <p><b>Step 2: Access Supcoin Website:</b></p>
-        <ul>
-          <li>
-            Open your web browser and go to Supcoin.co. The website should
-            display the Supcoin platform.
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 3: Click the "Connect" Button:</b></p>
-        <ul>
-          <li>
-            Locate and click the "Connect" button on the website's interface.
-            You'll typically find this button at the top-right corner of the
-            screen.
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 4: Choose "Wallet Connect": </b></p>
-        <ul>
-          <li>
-            After clicking "Connect," a pop-up box will appear with various
-            wallet connection options. Look for and select "Wallet Connect"
-            among the options.
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 5: Scan the QR Code:</b></p>
-        <ul>
-          <li>
-            A QR code will be displayed on the website's screen. To connect your
-            Trust Wallet, open the Trust Wallet app on your mobile phone.
-          </li>
-          <li>
-            Within the Trust Wallet app, look for the "Wallet Connect" feature.
-            It's usually found in the settings or options menu.
-          </li>
-          <li>
-            Use the Trust Wallet app to scan the QR code displayed on the
-            website's screen. This action establishes a secure connection
-            between your Trust Wallet and the website.
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 6: Connection Confirmation:</b></p>
-        <ul>
-          <li>
-            Once you've successfully scanned the QR code, you'll notice that you
-            are now connected. This connection status is often indicated at the
-            top-right corner of the website's interface
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 7: Select Purchase Option:</b></p>
-        <ul>
-          <li>You will want to switch to BNB by clicking on “Buy with BNB”</li>
-          <li>
-            Once connected to the BNB Smart Chain, click the "Buy Sup with ETH"
-            button.
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 8: Initiate Purchase: </b></p>
-        <ul>
-          <li>Click "Buy Sup with USDT."</li>
-          <li>
-            Ensure you have sufficient USDT in your wallet to cover the
-            purchase.
-          </li>
-          <li>
-            If you have enough USDT and ETH for the gas fee, proceed; otherwise,
-            you'll receive a warning.
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 9: Choose Purchase Amount:</b></p>
-        <ul>
-          <li>
-            You can choose to spend the maximum amount of USDT by clicking
-            "Max."
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 10: Confirm Purchase:</b></p>
-        <ul>
-          <li>Once you've made your selections, click "Buy Now."</li>
-          <li>
-            On your trust wallet app, you should get a notification asking if
-            you want to “Confirm Your Payment”
-          </li>
-          <li>Click "Approve" to complete the purchase on Trust Wallet app</li>
-          <li>
-            Note: You may get a warning message “if you are using your trust
-            wallet through a Binance Smart Chain and that it is a high risk, be
-            careful and make sure you trust this site” that is normal. Just make
-            sure you are on Supcoin.co
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 11: Completion:</b></p>
-        <ul>
-          <li>
-            Congratulations! You've successfully purchased SUP tokens using USDT
-            on the ERC20 network.
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p><b>Step 12: Further Assistance:</b></p>
-        <ul>
-          <li>
-            If you encounter any issues or have concerns, refer to the
-            troubleshooting page on the platform.
-          </li>
-          <li>
-            You can also join the Telegram or Discord communities to get additional assistance from moderators.
-          </li>
-        </ul>
-      </div>
-
-      <p>
-        That's it! You've completed the process of buying SUP tokens using USDT on the ERC20 network. Please be cautious and do your research when investing in cryptocurrencies.
-      </p>
     </div>
   </body>
 </html>
