--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
         <ul>
           <li>
             To view your token balance within Trust Wallet, add the SUP token to your wallet. Click on the dotted button in the top-right of the screen, followed by ‘Add Custom Token.’ Paste the SUP contract address:
+            &RightArrow;
           </li>
         </ul>
       </div>
