--- a/test.html
+++ b/test.html
@@ -1,19 +1,13 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div style="list-style: inside">
-      <div>
-        <ul>
-          <li>
-            To view your token balance within Trust Wallet, add the SUP token to your wallet. Click on the dotted button in the top-right of the screen, followed by ‘Add Custom Token.’ Paste the SUP contract address:
-            &RightArrow;
-          </li>
-        </ul>
-      </div>
-    </div>
-  </body>
-</html>
+<div>
+    <p> This Terms of Service (“Agreement”) is a binding contract between you, an individual or entity user or authorized representative of such user (“you”) and Wefreelancer Global Tech (the parent company of Supelle) and its wholly owned subsidiaries (herein referred to as “we,” “us,” or “our”). This Agreement governs your use of any website that links to these terms, including http://supcoin.co/ (and all related subdomains) and its mobile applications (“Site”) and the services we provide (“Services”) regarding Digital Assets (“Digital Assets”) (sometimes called cryptocurrency).</p>
+
+    <p>Supelle is not a bank, broker-dealer, or tax advisor and does not offer these or any related services.</p>
+
+    <h6 class="bold">BY ACCESSING OR USING THE SITE OR OUR SERVICES, YOU AGREE THAT YOU HAVE READ, UNDERSTOOD, AND AGREE TO BE BOUND BY THIS AGREEMENT. IF YOU DO NOT AGREE TO THIS AGREEMENT, THEN YOU MUST NOT ACCESS OR USE THE SITE OR OUR SERVICES.</h6>
+
+    <p>If you are accessing the Site or using our Services on behalf of a business or corporate entity (“Organization”), then you hereby represent and warrant that you have the authority to bind that Organization, and your acceptance of this Agreement will be treated as acceptance by the Organization. In that event, “User” (defined above) and “you” in this Agreement will refer to the Organization.</p>
+
+    <h6 class="bold mt-5">Material Terms </h6>
+
+    
+</div>
