--- a/test.html
+++ b/test.html
@@ -4,10 +4,12 @@
     <p>Supelle is not a bank, broker-dealer, or tax advisor and does not offer these or any related services.</p>
 
     <h6 class="bold">BY ACCESSING OR USING THE SITE OR OUR SERVICES, YOU AGREE THAT YOU HAVE READ, UNDERSTOOD, AND AGREE TO BE BOUND BY THIS AGREEMENT. IF YOU DO NOT AGREE TO THIS AGREEMENT, THEN YOU MUST NOT ACCESS OR USE THE SITE OR OUR SERVICES.</h6>
-
     <p>If you are accessing the Site or using our Services on behalf of a business or corporate entity (“Organization”), then you hereby represent and warrant that you have the authority to bind that Organization, and your acceptance of this Agreement will be treated as acceptance by the Organization. In that event, “User” (defined above) and “you” in this Agreement will refer to the Organization.</p>
-
-    <h6 class="bold mt-5">Material Terms </h6>
-
-    
+    <h6 class="bold">Material Terms</h6>
+    <h6>Under this Agreement, you acknowledge the following:</h6>
+    <ul>
+        <li>You consent to the collection, use, and disclosure of information in accordance with and to be bound by the <a href="#">Supelle Privacy Policy</a> (“Privacy Policy”)</li>
+        <li></li>
+        <li></li>
+    </ul>
 </div>
