--- a/test.html
+++ b/test.html
@@ -1,15 +1,80 @@
 <div>
-    <p> This Terms of Service (“Agreement”) is a binding contract between you, an individual or entity user or authorized representative of such user (“you”) and Wefreelancer Global Tech (the parent company of Supelle) and its wholly owned subsidiaries (herein referred to as “we,” “us,” or “our”). This Agreement governs your use of any website that links to these terms, including http://supcoin.co/ (and all related subdomains) and its mobile applications (“Site”) and the services we provide (“Services”) regarding Digital Assets (“Digital Assets”) (sometimes called cryptocurrency).</p>
+  <h2 class="bold mb-4">Risk Disclosure</h2>
+  <p class="bold">
+    Important Information on Cryptocurrency and Digital Asset Risk
+  </p>
+  <p>
+    Wefreelancer Global Tech (the parent company of Supelle) believes that
+    cryptocurrency is the future of finance. Hence, we are proudly collaborating
+    with experts, industry leaders, and policymakers in the U.S. and
+    internationally as we develop our platform. However, while this digital
+    platform is full of potential and promise, it does have certain risks
+    involved.future
+  </p>
 
-    <p>Supelle is not a bank, broker-dealer, or tax advisor and does not offer these or any related services.</p>
+  <p>
+    We encourage all users of cryptocurrencies and digital assets to conduct
+    their own due diligence before opening an account and/or buying, selling, or
+    trading cryptocurrencies and digital assets. Please evaluate your particular
+    financial circumstances to determine whether or not trading cryptocurrencies
+    is appropriate for you.
+  </p>
 
-    <h6 class="bold">BY ACCESSING OR USING THE SITE OR OUR SERVICES, YOU AGREE THAT YOU HAVE READ, UNDERSTOOD, AND AGREE TO BE BOUND BY THIS AGREEMENT. IF YOU DO NOT AGREE TO THIS AGREEMENT, THEN YOU MUST NOT ACCESS OR USE THE SITE OR OUR SERVICES.</h6>
-    <p>If you are accessing the Site or using our Services on behalf of a business or corporate entity (“Organization”), then you hereby represent and warrant that you have the authority to bind that Organization, and your acceptance of this Agreement will be treated as acceptance by the Organization. In that event, “User” (defined above) and “you” in this Agreement will refer to the Organization.</p>
-    <h6 class="bold">Material Terms</h6>
-    <h6>Under this Agreement, you acknowledge the following:</h6>
-    <ul>
-        <li>You consent to the collection, use, and disclosure of information in accordance with and to be bound by the <a href="#">Supelle Privacy Policy</a> (“Privacy Policy”)</li>
-        <li></li>
-        <li></li>
-    </ul>
+  <p>
+    Do not invest funds in cryptocurrencies that you cannot afford to lose.
+    Transactions in cryptocurrency may be irreversible, and, accordingly, losses
+    due to accidental transactions, changes in the ecosystem, etcetera may not
+    be recoverable.
+  </p>
+  <p class="bold">Potential Tax Implications.</p>
+  <ol>
+    <li class="mb-3"><b>Capital Gains:</b> If you buy and hold digital or virtual currencies as an investment, you may be subject to capital gains taxes when you sell them for a profit. The tax rate will depend on how long you held the asset and your tax bracket.</li>
+    <li class="mb-3">
+      <b>Income:</b> If you receive digital or virtual currencies as payment for goods or services, this income may be taxable. The value of the currency at the time you receive it would be included in your gross income for tax purposes.
+    </li>
+    <li class="mb-3"><b>Foreign Accounts:</b> If you hold digital or virtual currencies in foreign accounts, you may be required to report those accounts to your government and pay taxes on any income earned from them.</li>
+  </ol>
+
+  <p class="bold mb-4">Consult with a Professional: </p>
+  <p>Laws and regulations regarding digital and virtual currencies are still evolving, and there may be additional tax implications in the future. We recommend that you consult with a licensed tax professional to fully understand your tax obligations when using digital or virtual currencies.
+  </p>
+
+  <p class="bold mb-4">Account Insurance</p>
+  <p>Any insurance or surety bonds maintained by Supelle for the benefit of its customers may not be sufficient to cover all potential losses incurred by customers. </p>
+
+  <p class="bold mb-4">Cryptocurrency and Digital Asset Features</p>
+  <p>Cryptocurrencies and other digital assets are digital representations of value that function as a medium of exchange, a unit of account, or a store of value but do not have legal tender status. Cryptocurrencies are sometimes exchanged for U.S. dollars or other fiat currencies around the world, but they are not generally backed or supported by any government or central bank. Their value is completely derived from market forces of supply and demand, and they are more volatile than traditional currencies.
+  </p>
+  <p>Cryptocurrencies and other digital assets are subject to changes or may otherwise cease to operate as expected due to changes made to their underlying technology, changes made using their underlying technology, or other general changes, whether anticipated or unpredicted. These changes can include, but are not limited to, forks, rollbacks, airdrops, or bootstraps.</p>
+
+  <ul class="mt-4">
+    <li>Fork: A split in the blockchain network.</li>
+    <li>Rollback: A reversal of a transaction on the blockchain.</li>
+    <li>Airdrop: A distribution of tokens to users for free.</li>
+    <li>Bootstrap: The initial distribution of tokens in a new cryptocurrency network.</li>
+  </ul>
+
+  <p class="bold mt-4">Government Regulations and Legal Solutions</p>
+  <p>Future legislative and regulatory changes or actions at the state, federal, or international level may adversely affect the use, transfer, exchange, and value of cryptocurrency and other digital assets.
+  </p>
+  <p>In addition, cryptocurrency markets and exchanges are not regulated with the same controls or customer protections available in equity, option, futures, or foreign exchange investing. There is no assurance that a person who accepts a cryptocurrency as payment today will continue to do so in the future, and there may be few, if any, options regarding legal solutions.</p>
+
+  <p class="bold mt-4">Transactions and Other Fees</p>
+  <p>While Supelle does guarantee to keep our transaction fees as low as possible, the amounts of these fees are subject to market forces. As we do our best to render the best services we can, it is possible that the fees could increase substantially during a period of increased activity or volatility.
+  </p>
+  
+  <p>You can learn more about our fees here.</p>
+
+  <p class="bold mt-4">Additional Resources</p>
+  <p>Wefreelancer Global Tech collaborates closely with federal, state, and international regulators to build our platform. For more information regarding cryptocurrencies, digital assets, and their associated risks, check out:</p>
+
+  <ul>
+    <li>Consumer Financial Protection Bureau (CFPB) Consumer Advisory</li>
+    <li>Financial Industry Regulatory Authority (FINRA)’s Cryptocurrencies Hub</li>
+    <li>Commodity Futures Trading Commission (CFTC) Virtual Currencies</li>
+  </ul>
 </div>
+<b>
+
+  
+</b>
