--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Supcoin</title>
   </head>
-  <body style="top: 0px !important;">
+  <body style="top: 0px !important">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,6 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
@@ -57,12 +58,23 @@
           { pageLanguage: "en" },
           "google_translate_element"
         );
-        document.querySelector(`[id=":0.targetLanguage"]`).nextSibling.remove()
+        document.querySelector(`[id=":0.targetLanguage"]`).nextSibling.remove();
       }
     </script>
     <script
       type="text/javascript"
       src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
     ></script>
+
+    <script
+    src="https://static.elfsight.com/platform/platform.js"
+    data-use-service-core
+    defer
+  ></script>
+  <div
+    class="elfsight-app-57d10611-4cef-4b28-88d9-cacf6bcf99df"
+    data-elfsight-app-lazy
+  ></div>
+
   </body>
 </html>
